# ISCI-hackathon

./: .gitignore  AGENTS.md  Application.docx  CITATION.cff  CLAUDE.md  DELIVERABLE.md  DEMO_SCRIPT.md  ELEVENLABS_PACKAGE.md  ELEVENLABS_SCRIPT_SHORT.md  Event Details.docx  HACKATHON_RUNBOOK.md  JUDGE_QA.md  JUDGE_QA_REHEARSAL.md  Makefile  README.md  RECORDING_SCRIPT.md  SUBMISSION.md  SUMMARY.md  THIRD_PARTY_NOTICES.md  VIDEO_NARRATION.md  VIDEO_SCRIPT_FINAL.md  pyproject.toml
briefs/: 01_behav3d_p3_proxy.md  02_iec_latent_scvi.md  03_cart_atlas_validate.md  04_iec_clinical_prediction.md  05_foundation_model_triangulation.md  06_frangieh_protein_slice_totalvi.md  07_scgpt_zeroshot_concordance.md
config/: axes.yaml  datasets.yaml  donor_dataset_candidates.yaml  hackathon_claims.yaml  hackathon_timing.json  off_target_pilot.yaml
contracts/: dataset_spec.schema.json  results_schema.yaml
data/: README.md
docs/: benchmark.md  cell_level_h5ad_preprocessing.md  claude_science_prompt.md  d4_cohorts.md  dataset_spec.md  execution_plan.json  hackathon_judge_demo.html  hackathon_judge_demo.template.html  index.html  method.md  plan.md  related_work.md
envs/: requirements_machine.txt
isci/: __init__.py  analysis_runner.py  axes.py  baselines.py  build_dashboard.py  cli.py  dataset_gates.py  dataset_spec.py  decomposition.py  effect_builder.py  evidence.py  feature_extraction.py  guide_sequence_validation.py  index.py  insilico.py  io.py  movement.py  network.py  panel_validation.py  pipeline.py  power_planning.py  prospective_panel.py  qc.py  repro.py  run_cci.py  run_layer.py  stability.py  targeted_panel.py  topology_null.py  validate.py
notebooks/: 01_isci_d0.ipynb  ISCI_Researcher_Track_Walkthrough.ipynb
outputs/: clinical_report.md  confounder_ledger.json  confounder_ledger_v2.json  confounder_scores_v2.parquet  controllers_annotated.csv  curated_enrichment_continuous.csv  curated_enrichment_magnitude_guard.csv  evidence_cards.json  evidence_cards.md  family_enrichment_matched_null.csv  gene_covariates.parquet  gene_features.parquet  iec_controller_map.csv  incremental_test_correction.json  isci_d0_ranked.csv  isci_final_ranking.csv  isci_hackathon_medical_deck.pptx  isci_oof_incremental.json  (+17 more)
(+275 files in other folders)
