[project]
name = "isci"
version = "0.1.0"
description = "Immune-State Controllability Index — Built with Claude: Life Sciences hackathon"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Abel Costa" }]
dependencies = [
    "anndata>=0.10",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyyaml>=6.0",
    "scanpy>=1.10",
    "scipy>=1.11",
    "pertpy>=0.6",
    "decoupler>=1.6",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
    "pert2state_model @ git+https://github.com/emdann/pert2state_model.git@main",
]

[project.scripts]
isci = "isci.cli:main"

[project.optional-dependencies]
insilico = [
    "celloracle>=0.21",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["isci"]

[tool.ruff]
line-length = 100
target-version = "py311"
