[project]
name = "isci"
version = "0.1.0"
description = "ISCI, the auditable T-cell controllability method behind T-CTRL"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.14"
authors = [{ name = "Abel Costa" }]
dependencies = [
    "anndata>=0.10",
    "h5py>=3.10",
    "numpy>=1.26",
    "pandas>=2.1",
    "pyarrow>=16",
    "pyyaml>=6.0",
    "scipy>=1.11",
    "scikit-learn>=1.4",
    "statsmodels>=0.14",
]

[project.scripts]
isci = "isci.cli:main"

[project.optional-dependencies]
research = [
    "scanpy>=1.10",
    "pertpy>=0.6",
    "decoupler>=1.6",
]
visualization = [
    "matplotlib>=3.8",
    "seaborn>=0.13",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "python-pptx>=1.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["isci"]

[tool.ruff]
line-length = 100
target-version = "py311"
